--- a/src/components/ProductDetails/ProductDetails.css
+++ b/src/components/ProductDetails/ProductDetails.css
@@ -2,38 +2,35 @@
 
 .product-details {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   padding: 20px;
-}
-
-.image-container {
-  width: 300px;
-  height: 300px;
-  overflow: hidden;
-  border: 1px solid #ccc;
-  margin-bottom: 20px;
-}
-
-.image-slideshow {
-  display: flex;
-  transition: transform 0.3s ease-in-out;
-}
-
-.image-slide {
-  min-width: 300px;
-  flex-shrink: 0;
-}
-
-.image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .title {
   font-size: 24px;
   margin-bottom: 10px;
+}
+
+.image-container{
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 70dvh;
+}
+
+.image-container img{
+    width: 100%;
+    min-height: 30rem;
+    height: auto;  
+}
+
+.content-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  height: 70dvh;
 }
 
 .description {
@@ -49,6 +46,27 @@
   transition: color 0.3s;
 }
 
+
+.product-count-container{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 2rem;
+}
+
+.product-count{
+  margin: 0 1.5rem;
+  background-color: lightgrey;
+  border-radius: 5px;
+  padding: 1rem;
+  font-size: 2rem;
+}
+
+.add-minus-btn{
+  cursor: pointer;
+}
+
+
 .back-to-shopping-link:hover {
   color: #000;
 }
@@ -63,34 +81,12 @@
   font-size: 16px;
 }
 
-/* ProductDetails.css */
-/* ... (your existing styles) */
+@media screen and (max-width:840px) {
+  .product-details {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 
-.image-slideshow {
-  display: flex;
-  transition: transform 0.5s ease;
 }
-
-.image-slide {
-  flex: 0 0 100%;
-  display: none;
-  align-items: center;
-  justify-content: center;
-}
-
-.image-slide.active {
-  display: flex;
-}
-
-.image {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.slideshow-controls {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-}
-
-/* ... (rest of your styles) */
