--- a/src/components/ProductDetails/ProductDetails.css
+++ b/src/components/ProductDetails/ProductDetails.css
@@ -1,8 +1,6 @@
-/* ProductDetails.css */
-
 .product-details {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 20px;
 }
@@ -12,20 +10,26 @@
   margin-bottom: 10px;
 }
 
-.image-container{
+.product-price{
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.image-container {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   height: 70dvh;
 }
 
-.image-container img{
-    width: 100%;
-    min-height: 30rem;
-    height: auto;  
+.image-container img {
+  width: 100%;
+  min-height: 20rem;
+  margin-bottom: 5rem;
+  height: auto;
 }
 
-.content-container{
+.content-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -46,15 +50,14 @@
   transition: color 0.3s;
 }
 
-
-.product-count-container{
+.product-count-container {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   margin: 2rem;
 }
 
-.product-count{
+.product-count {
   margin: 0 1.5rem;
   background-color: lightgrey;
   border-radius: 5px;
@@ -62,10 +65,9 @@
   font-size: 2rem;
 }
 
-.add-minus-btn{
+.add-minus-btn {
   cursor: pointer;
 }
-
 
 .back-to-shopping-link:hover {
   color: #000;
@@ -81,12 +83,23 @@
   font-size: 16px;
 }
 
-@media screen and (max-width:840px) {
+
+.slideshow-container {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 300px;
+}
+
+.each-fade img {
+  width: 100%; 
+  height: auto;
+}
+
+@media screen and (max-width: 840px) {
   .product-details {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
   }
-
 }
